--- a/LearningScenarios/code-pipeline-i533029.yaml
+++ b/LearningScenarios/code-pipeline-i533029.yaml
@@ -4,12 +4,12 @@ metadata:
   name: code-pipeline-i533029 # executable id, must be unique across all your workflows (YAML files), please modify this to any value (e.g. code-pipeline-12345) if you are not the only user of your SAP AI Core instance.
   annotations:
     scenarios.ai.sap.com/description: "Tutorial to add custom code to SAP AI Core"
-    scenarios.ai.sap.com/name: "Code (Tutorial)"
+    scenarios.ai.sap.com/name: "Code (Tutorial) I5330292"
     executables.ai.sap.com/description: "Trains model on median house prices"
-    executables.ai.sap.com/name: "House Price (Sklearn Example)"
+    executables.ai.sap.com/name: "House Price (Sklearn Example) I533029"
   labels:
     scenarios.ai.sap.com/id: "learning-code"
-    ai.sap.com/version: "1.0"
+    ai.sap.com/version: "2.0"
 spec:
   imagePullSecrets:
     - name: credstutorial533029 # your docker registry secret
@@ -22,7 +22,7 @@ spec:
 
   - name: mycodeblock1
     container:
-      image: docker.io/dockerdockingdocked1234/house-price:01 # Your docker image name
+      image: docker.io/dockerdockingdocked1234/house-price:02 # Your docker image name
       command: ["/bin/sh", "-c"]
       args:
         - "python /app/src/main.py"
